@@ -18,6 +18,8 @@ package club.dawdler.server.log;
 
 import java.io.File;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.List;
 
@@ -42,8 +44,8 @@ import ch.qos.logback.core.util.StatusListenerConfigHelper;
  */
 public class DawdlerLogbackContextInitializer {
 
-	public static final String AUTOCONFIG_FILE = "logback.xml";
-	public static final String TEST_AUTOCONFIG_FILE = "logback-test.xml";
+	final public static String AUTOCONFIG_FILE = "logback.xml";
+	final public static String TEST_AUTOCONFIG_FILE = "logback-test.xml";
 
 	final LoggerContext loggerContext;
 
@@ -77,9 +79,9 @@ public class DawdlerLogbackContextInitializer {
 		if (logbackConfigFile != null) {
 			URL result = null;
 			try {
-				result = new URL(logbackConfigFile);
+				result = new URI(logbackConfigFile).toURL();
 				return result;
-			} catch (MalformedURLException e) {
+			} catch (MalformedURLException | IllegalArgumentException | URISyntaxException e) {
 				result = Loader.getResource(logbackConfigFile, classLoader);
 				if (result != null) {
 					return result;
@@ -94,7 +96,7 @@ public class DawdlerLogbackContextInitializer {
 				}
 			} finally {
 				if (updateStatus) {
-					statusOnResourceSearch(logbackConfigFile, result);
+					statusOnResourceSearch(logbackConfigFile, classLoader, result);
 				}
 			}
 		}
@@ -119,7 +121,7 @@ public class DawdlerLogbackContextInitializer {
 	private URL getResource(String filename, ClassLoader myClassLoader, boolean updateStatus) {
 		URL url = Loader.getResource(filename, myClassLoader);
 		if (updateStatus) {
-			statusOnResourceSearch(filename, url);
+			statusOnResourceSearch(filename, myClassLoader, url);
 		}
 		return url;
 	}
@@ -152,13 +154,32 @@ public class DawdlerLogbackContextInitializer {
 		}
 	}
 
-	private void statusOnResourceSearch(String resourceName, URL url) {
+	private void statusOnResourceSearch(String resourceName, ClassLoader classLoader, URL url) {
 		StatusManager sm = loggerContext.getStatusManager();
 		if (url == null) {
 			sm.add(new InfoStatus("Could NOT find resource [" + resourceName + "]", loggerContext));
 		} else {
 			sm.add(new InfoStatus("Found resource [" + resourceName + "] at [" + url.toString() + "]", loggerContext));
+//			multiplicityWarning(resourceName, classLoader);
 		}
 	}
+
+//	private void multiplicityWarning(String resourceName, ClassLoader classLoader) {
+//		Set<URL> urlSet = null;
+//		StatusManager sm = loggerContext.getStatusManager();
+//		try {
+//			urlSet = Loader.getResources(resourceName, classLoader);
+//		} catch (IOException e) {
+//			sm.add(new ErrorStatus("Failed to get url list for resource [" + resourceName + "]", loggerContext, e));
+//		}
+//		if (urlSet != null && urlSet.size() > 1) {
+//			sm.add(new WarnStatus("Resource [" + resourceName + "] occurs multiple times on the classpath.",
+//					loggerContext));
+//			for (URL url : urlSet) {
+//				sm.add(new WarnStatus("Resource [" + resourceName + "] occurs at [" + url.toString() + "]",
+//						loggerContext));
+//			}
+//		}
+//	}
 
 }
